# exhubris

./: .gitignore  Cargo.toml  README.mkdn  hubris-env.toml  kernel-link.x  rust-toolchain.toml  task-link2.x
app/demo/: README.mkdn  app.kdl
app/demo-g030/: app.kdl  spi-master.kdl  spi-slave.kdl
app/demo-l4/: app.kdl
app/demo-nucleo-u575/: README.mkdn  app.kdl
app/kbd/: README.mkdn  app.kdl
app/kbd/basic-scanner/: Cargo.toml  build.rs  scanner-idl.kdl
app/kbd/basic-scanner-api/: Cargo.toml  build.rs
app/kbd/basic-scanner/src/: main.rs
app/kbd/keyboard/: Cargo.toml  README.mkdn
app/kbd/keyboard/src/: main.rs
chips/: stm32g030k8.kdl  stm32g031k8.kdl  stm32l412kb.kdl  stm32u575zi_ns.kdl
doc/: appdef.adoc  boarddef.adoc  build-env.adoc  chipdef.adoc  hubake.adoc
drv/l4blinky/: Cargo.toml  build.rs  task.kdl
drv/l4blinky/src/: main.rs
drv/stm32g0-sys/: Cargo.toml  sys-idl.kdl
drv/stm32g0-sys-api/: Cargo.toml  build.rs
drv/stm32g0-sys-api/src/: lib.rs
drv/stm32g0-sys/src/: main.rs
drv/stm32l4-sys/: Cargo.toml  build.rs  sys-idl.kdl
drv/stm32l4-sys-api/: Cargo.toml  build.rs
drv/stm32l4-sys/src/: main.rs
drv/stm32l4-usb/: Cargo.toml  build.rs  usbhid-idl.kdl
drv/stm32l4-usb-api/: Cargo.toml  build.rs
drv/stm32l4-usb/src/: hid.rs  main.rs  protocol.rs  usbsram.rs
drv/stm32xx-sys/: Cargo.toml  sys-idl.kdl
drv/stm32xx-sys-api/: Cargo.toml  build.rs
drv/stm32xx-sys/src/: main.rs
drv/uart-echo/: Cargo.toml  build.rs
drv/uart-echo/src/: main.rs
files/: kernel-link.x  task-link3.x  task-rlink.x
kernel-generic-stm32g030/: Cargo.toml  README.md
kernel-generic-stm32g030/.cargo/: config.toml
kernel-generic-stm32g030/src/: main.rs
kernel-generic-stm32g031/: Cargo.toml  README.md
kernel-generic-stm32g031/src/: main.rs
kernel-generic-stm32l412/: Cargo.toml  README.md
kernel-generic-stm32l412/src/: main.rs
kernel-generic-stm32u575/: Cargo.toml  README.md  openocd.cfg
kernel-generic-stm32u575/.cargo/: config.toml
kernel-generic-stm32u575/src/: main.rs
sys/build-util/: Cargo.toml  README.mkdn
sys/build-util/src/: lib.rs
sys/idyll_runtime/: Cargo.toml
sys/idyll_runtime/src/: lib.rs
sys/kipc/: Cargo.toml  README.mkdn
sys/kipc/src/: lib.rs
sys/kipc/src/arch/: arm_m.rs
sys/notifications/: Cargo.toml  README.mkdn  build.rs
sys/notifications/src/: lib.rs
sys/num-tasks/: Cargo.toml  README.mkdn  build.rs
sys/num-tasks/src/: lib.rs
sys/num-tasks/src/arch/: fake.rs
sys/task-slots/: Cargo.toml  README.mkdn  build.rs
sys/task-slots/src/: lib.rs
sys/userlib/: Cargo.toml  README.mkdn  build.rs
sys/userlib/src/: lib.rs
sys/userlib/src/arch/: arm_m.rs  fake.rs
task/blinky/: Cargo.toml
task/blinky/src/: main.rs
task/display/: Cargo.toml  README.mkdn
task/display/src/: main.rs
task/idle/: Cargo.toml  README.mkdn
task/idle/src/: main.rs
task/keyboard/: Cargo.toml  task.kdl
task/keyboard/src/: main.rs
task/minisuper/: Cargo.toml  README.mkdn
task/minisuper/src/: main.rs
task/ping/: Cargo.toml  build.rs
task/ping/src/: main.rs
task/pong/: Cargo.toml
task/pong/src/: main.rs
task/spi/: Cargo.toml
task/spi-master/: Cargo.toml  README.mkdn
task/spi-master/src/: main.rs
task/spi-rcv/: Cargo.toml  README.mkdn
task/spi-rcv/src/: main.rs
task/spi-slave/: Cargo.toml
task/spi-slave/src/: main.rs
tools/: Cargo.toml
tools/alloc/: Cargo.toml
tools/alloc/src/: lib.rs
tools/hubake/: Cargo.toml  README.mkdn
tools/hubake/src/: main.rs
tools/src/: alloc.rs  appcfg.rs  config.rs  idl.rs  lib.rs
tools/src/idl/: codegen.rs
