[workspace]
resolver = "2"
members = [
    "kernel-generic-stm32g031",
    "sys/*",
    "task/*",
    "drv/*",
    "tools",
]

[workspace.dependencies]
userlib = {path = "sys/userlib"}
kipc = {path = "sys/kipc"}
hubris-num-tasks = {path = "sys/num-tasks"}

[profile.release]
debug = true
lto = true
opt-level = "s"
