[workspace]
resolver = "2"
members = [
    "kernel-generic-*",
    "sys/*",
    "task/*",
    "drv/*",
    "tools/build",
    "tools/hubake",
    "tools/alloc",

    "app/kbd/basic-scanner",
    "app/kbd/basic-scanner-api",
]

[workspace.dependencies]
userlib = {path = "sys/userlib"}
kipc = {path = "sys/kipc"}
hubris-num-tasks = {path = "sys/num-tasks"}
hubris-build = {path="tools/build"}

[profile.release]
debug = true
lto = true
opt-level = "s"
