[package]
name = "kernel-generic-stm32g031"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.5"
hubris-kern = {package = "kern", git = "https://github.com/oxidecomputer/hubris.git", features = ["nano"]}
stm32g0 = { version = "0.15.1", features = ["stm32g031"] }
