[package]
name = "kernel-generic-stm32g031"
version = "0.1.0"
edition = "2021"

[features]
clock-64mhz-hsi16 = []

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.5"
#hubris-kern = {package = "kern", git = "https://github.com/oxidecomputer/hubris.git", features = ["nano"]}
hubris-kern = {package = "kern", git = "https://github.com/cbiffle/hubris-fork.git", branch = "cbiffle/exhubris-fixes", features = ["nano"]}
stm32-metapac = {version = "15.0.0", features = ["rt", "stm32g031k8"]}
