[package]
name = "kernel-generic-stm32l412"
version = "0.1.0"
edition = "2021"

[features]
clock-80mhz-hsi16 = []
clock-hsi48-on = []

pwr-vddusb-valid = []

# Rather specialized kernel profiling via fixed GPIOs.
# Probably of limited usefulness in general.
kernel-profiling = []

[dependencies]
cfg-if = "1.0.0"
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.5"
#hubris-kern = {package = "kern", git = "https://github.com/oxidecomputer/hubris.git", features = ["nano"]}
hubris-kern = {package = "kern", git = "https://github.com/cbiffle/hubris-fork.git", branch = "cbiffle/exhubris-fixes", features = ["nano"]}
stm32l4 = { version = "0.15.1", features = ["stm32l412"] }
