[package]
name = "tools"
version = "0.1.0"
edition = "2021"

[dependencies]
cargo_metadata = "0.18.1"
clap = { version = "4.5.20", features = ["derive"] }
comfy-table = "7.1.3"
goblin = { version = "0.9.2", features = ["elf32", "elf64", "endian_fd", "std"], default-features = false }
indexmap = { version = "2.6.0", features = ["serde"] }
itertools = "0.13.0"
kdl = "4.6.0"
miette = { version = "5.10", features = ["fancy"] }
size = "0.4.1"
strsim = "0.11.1"

#hubris-build-kconfig = {package = "build-kconfig", git = "https://github.com/oxidecomputer/hubris.git"}
hubris-build-kconfig = {package = "build-kconfig", git = "https://github.com/cbiffle/hubris-fork.git", branch = "cbiffle/exhubris-fixes"}
ron = "0.8.1"
rangemap = "1.5.1"
ihex = "3.0.0"
tempdir = "0.3.7"
