[package]
name = "l4blinky"
version = "0.1.0"
edition = "2021"

[features]
# It is annoying that the chip features are specified down to the package level,
# but, that is how the stm32-metapac do.
chip-stm32l412kb = ["stm32-metapac/stm32l412kb"]

[dependencies]
drv-stm32l4-sys-api = { version = "0.1.0", path = "../stm32l4-sys-api" }
hubris-notifications = { version = "0.1.0", path = "../../sys/notifications" }
hubris-task-slots = { version = "0.1.0", path = "../../sys/task-slots" }
stm32-metapac = { version = "15.0.0" }
userlib = { workspace = true, features = ["no-panic"] }

[build-dependencies]
serde_json = "1.0.133"

[package.metadata.hubris.auto-features]
chip = true
