[package]
name = "kipc"
version = "0.1.0"
edition = "2021"

[features]

[dependencies]
userlib.workspace = true
hubris-abi = {package = "abi", git = "https://github.com/cbiffle/hubris-fork.git", branch = "cbiffle/exhubris-fixes" }
ssmarshal = {version = "1.0.0", default-features = false}

[lib]
test = false
bench = false
doctest = false
