[package]
name = "userlib"
version = "0.1.0"
edition = "2021"

[features]
default = []
no-panic = []
no-panic-messages = []

[dependencies]
cfg-if = "1.0.0"

[target.thumbv7em-none-eabihf.dependencies]
cortex-m = {version = "0.7", features = ["inline-asm"]}

[target.thumbv6m-none-eabi.dependencies]
cortex-m = {version = "0.7", features = ["inline-asm"]}

[lib]
test = false
bench = false
doctest = false
