[package]
name = "blinky"
version = "0.1.0"
edition = "2021"

[dependencies]
drv-stm32xx-sys-api = { version = "0.1.0", path = "../../drv/stm32xx-sys-api" }
hubris-task-slots = { version = "0.1.0", path = "../../sys/task-slots" }
hubris-notifications = { version = "0.1.0", path = "../../sys/notifications" }
userlib = { workspace = true, features = ["no-panic"] }
