[package]
name = "keyboard"
version = "0.1.0"
edition = "2021"

[dependencies]
drv-stm32l4-sys-api = { version = "0.1.0", path = "../../drv/stm32l4-sys-api" }
drv-stm32l4-usb-api = { version = "0.1.0", path = "../../drv/stm32l4-usb-api" }
hubris-task-slots = { version = "0.1.0", path = "../../sys/task-slots" }
hubris-notifications = { path = "../../sys/notifications" }
userlib = {workspace = true, features = ["no-panic-messages"]}
