[package]
name = "kbd-basic-scanner-api"
version = "0.1.0"
edition = "2021"

[dependencies]
hubpack = "0.1.2"
idyll_runtime = { version = "0.1.0", path = "../../../sys/idyll_runtime" }
serde = { version = "1.0.215", default-features = false, features = ["derive"] }
userlib.workspace = true

[build-dependencies]
hubris-build.workspace = true
